addition/4.0/apps/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
  namespace: app-ns-stage
spec:
  selector:
    matchLabels:
      app: nginx_app
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx_app
    spec:
      containers:
      - name: nginx-app
        image: egerpro/nginx-app:1.0.1
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: nginx_app
  name: nginx-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: nginx_app
